nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeployment
  namespace: testcarlos
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: dockerhub.idm.net.lb/carlossawan/basic-nginx:7
        ports:
        - containerPort: 80
          name: "nginx-port"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: testcarlos
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
