ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: testcarlos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(connect/token|companies|users)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80
